ボタンAの処理を追加した

--- a/www/index.html
+++ b/www/index.html
@@ -182,8 +182,8 @@
     
     // ButtonAがクリックされた時の処理
     function btnAClick(e){
-        //active = true;
-        //atartTime = new Data();
+        active = true;
+        startTime = new Data();
         
     }
 
